--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,16 +4,23 @@
     <head>
         <title>Password Generator</title>
 
-        <link href="..\styles\default.css" rel="stylesheet">
+        <link href="{{ url_for('static', filename='styles/default.css') }}" rel="stylesheet">
     </head>
 
     <body>
         <h1>Password Generator</h1>
         <div id="name">
             <h3>Create</h3>
+            <form action="" method="get" name="submit">
+                <input type="submit" id="submit" value="Create username">
+            </form>
         </div>
         <div id="instructions">
             <h3>Instructions</h3>
+            <ol>
+                <li>Click the button</li>
+                <li>Copy the username</li>
+            </ol>
         </div>
     </body>
 </html>
